--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: Shakib@40
-      MYSQL_DATABASE: hotel_management_db_auth
+    volumes:
+      - ./mysql-init:/docker-entrypoint-initdb.d
     networks:
       - spring-net
     healthcheck:
@@ -83,31 +84,54 @@ services:
       retries: 5
       start_period: 15s
 
-  # order-service:
-  #   build: ./order-service
-  #   container_name: order-service
-  #   ports:
-  #     - "8083:8083"
-  #   depends_on:
-  #     config-server:
-  #       condition: service_healthy
-  #     discovery-server:
-  #       condition: service_healthy
-  #     redis:
-  #       condition: service_started
-  #   environment:
-  #     - SPRING_REDIS_HOST=redis
-  #     - SPRING_REDIS_PORT=6379
-  #     - SPRING_DATA_REDIS_HOST=redis
-  #     - SPRING_DATA_REDIS_PORT=6379
-  #   networks:
-  #     - spring-net
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
-  #     interval: 5s
-  #     timeout: 5s
-  #     retries: 5
-  #     start_period: 15s
+  user-service:
+    build: ./user-service
+    container_name: user-service
+    ports:
+      - "8082:8082"
+    depends_on:
+      config-server:
+        condition: service_healthy
+      discovery-server:
+        condition: service_healthy
+      mysql:
+        condition: service_healthy
+    networks:
+      - spring-net
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8082/user/actuator/health" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+
+  order-service:
+    build: ./order-service
+    container_name: order-service
+    ports:
+      - "8083:8083"
+    depends_on:
+      config-server:
+        condition: service_healthy
+      discovery-server:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      mysql:
+        condition: service_healthy
+    environment:
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_PORT=6379
+    networks:
+      - spring-net
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   api-gateway:
     build: ./api-gateway
@@ -117,8 +141,10 @@ services:
     depends_on:
       auth-service:
         condition: service_healthy
-      # order-service:
-      #   condition: service_healthy
+      user-service:
+        condition: service_healthy
+      order-service:
+        condition: service_healthy
       config-server:
         condition: service_healthy
       discovery-server:
@@ -126,7 +152,7 @@ services:
     networks:
       - spring-net
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/gateway/actuator/health" ]
       interval: 5s
       timeout: 5s
       retries: 5
