--- a/config-server/src/main/resources/config/notification-service-dev.yml
+++ b/config-server/src/main/resources/config/notification-service-dev.yml
@@ -19,6 +19,16 @@ spring:
           starttls:
             enable: true
 
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    consumer:
+      group-id: notification-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.notification.dto,com.auth.dto
+
 eureka:
   client:
     register-with-eureka: true
