--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,7 +121,7 @@ services:
     container_name: user-service
     ports:
       - "8082:8082"
-    depends_on:
+      # depends_on:
       # config-server:
       #   condition: service_healthy
       # discovery-server:
@@ -142,7 +142,7 @@ services:
     container_name: order-service
     ports:
       - "8083:8083"
-    depends_on:
+      # depends_on:
       # config-server:
       #   condition: service_healthy
       # discovery-server:
@@ -170,7 +170,7 @@ services:
     container_name: notification-service
     ports:
       - "8087:8087"
-    depends_on:
+      # depends_on:
       # config-server:
       #   condition: service_healthy
       # discovery-server:
@@ -194,6 +194,12 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      redis:
+        condition: service_started
+      mysql:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
       auth-service:
         condition: service_healthy
       user-service:
@@ -206,12 +212,7 @@ services:
         condition: service_healthy
       discovery-server:
         condition: service_healthy
-      redis:
-        condition: service_started
-      mysql:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
+
     networks:
       - spring-net
     healthcheck:
