--- a/config-server/src/main/resources/config/notification-service-dev.yml
+++ b/config-server/src/main/resources/config/notification-service-dev.yml
@@ -27,7 +27,9 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        spring.json.trusted.packages: com.notification.dto,com.auth.dto
+        spring.json.trusted.packages: "*"
+        spring.json.value.default.type: com.notification.dto.NotificationRequest
+        spring.json.use.type.headers: false
 
 management:
   health:
