--- a/config-server/src/main/resources/config/notification-service-dev.yml
+++ b/config-server/src/main/resources/config/notification-service-dev.yml
@@ -10,8 +10,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: your-email@gmail.com
-    password: your-app-password
+    username: shakib.jilani@sakhaglobal.com
+    password: shde llwo udxs tmnv
     properties:
       mail:
         smtp:
