--- a/config-server/src/main/resources/config/user-service-dev.yml
+++ b/config-server/src/main/resources/config/user-service-dev.yml
@@ -18,6 +18,15 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+security:
+  pepper: "my-unique-security-key-2026"
+
 eureka:
   client:
     register-with-eureka: true
