--- a/config-server/src/main/resources/config/api-gateway-dev.yml
+++ b/config-server/src/main/resources/config/api-gateway-dev.yml
@@ -39,9 +39,10 @@ spring:
           filters:
             - RewritePath=/api/notification/(?<segment>.*), /notifications/$\{segment}
       globalcors:
+        add-to-simple-url-handler-mapping: true
         cors-configurations:
           '[/**]':
-            allowedOrigins: "*"
+            allowedOriginPatterns: "*"
             allowedMethods:
               - GET
               - POST
@@ -49,6 +50,12 @@ spring:
               - DELETE
               - OPTIONS
             allowedHeaders: "*"
+            allowCredentials: true
+
+management:
+  endpoints:
+    web:
+      base-path: /gateway/actuator
 
 eureka:
   client:
